2005-05-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

	* Version 1.04 released.

	* Modified module layout to work and build in the Term::
	  root directory on CPAN. Menus.pm is now officially
	  Term::Menus (Term/Menus.pm).

	* Abstract updated to inform prospective users that Term::Menus
	  works in Terminals, Consoles and CMD environments.


2005-05-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.03 released.

        * Modified Makefile.PL to properly make manpages.

        * Added ChangeLog, updated MANIFEST.