@@ -1,3 +1,12 @@
+2005-05-10  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 1.05 released.
+
+        * Fixed bug where when the Display => element is not
+          specified in a Menu Item Hash, the default number of
+          10 was not being referenced, and no items would display.
+
+
 2005-05-04  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
 	* Version 1.04 released.
